--- a/_posts/2016-02-24-ARBO.md
+++ b/_posts/2016-02-24-ARBO.md
@@ -3,7 +3,7 @@ layout: post
 name: Arbor - Serious game
 title: Arbor - Serious game for Ergo-Enzo
 show_in_home: true
-img_url: http://placehold.it/400x225
+img_url: ../img/thumbs/arbor.png
 category: projects
 ---
 
