Added image for Card Climbers

--- a/_posts/2016-02-23-Yogamen.md
+++ b/_posts/2016-02-23-Yogamen.md
@@ -3,7 +3,7 @@ layout: post
 name: Card Climbers
 title: Card Climbers for Yogamen Team
 show_in_home: true
-img_url: http://placehold.it/400x225
+img_url: ../img/thumbs/yogamen.png
 category: projects
 ---
 
